# final-project-rag-pipeline

./: .gitignore  EXPERIMENTS.md  LICENSE  NOTES.md  README.md  analyze_load_times.py  analyze_statistical_significance.py  analyze_top_performers.py  data_sources.json  diagrams.graffle  filtered_experiments.txt  list_langsmith_experiments.py  pyproject.toml  run_bertscore_evaluation.py  run_bertscore_on_all.sh  run_dual_evaluations.py  run_experiment_suite.py  run_geval_evaluation.py  run_geval_on_all.sh  run_hallucination_evaluation.py  run_hallucination_on_all.sh  run_phased_evaluations.py  run_single_evaluation.py  run_single_missing_experiment.py
data/: test_questions.json  validation_question_answers.json
examples/: simple_rag.py  simpler_rag.py  test_langsmith.py  test_qdrant_write.py
guides/: analyze_top_performers_guide.md  run_bertscore_evaluation_guide.md  run_phased_evaluations_guide.md  run_single_evaluation_guide.md  run_single_missing_experiment_guide.md
notebook/: scratch.ipynb  scratch2.ipynb
notes/: observations-phase3.txt
reports/: appendix.Rmd  observations-phase1.txt  observations-phase2.txt  rag_experimentation_report.Rmd  references.bib  report.Rmd
results/phase1_20250402_005232/: experiment_plan.json  results.json
results/phase1_20250402_015229/: experiment_plan.json  (+1 more)
scripts/: test_anthropic_api_key.sh  uvx.sh
templates/: engineering_template.txt  engineering_template_2.txt  engineering_template_3.txt  engineering_template_4.txt  marketing_template.txt  marketing_template_2.txt  marketing_template_3.txt  writing_style_prompt.txt
(+83 files in other folders)
